--- a/styles/clickheat.css
+++ b/styles/clickheat.css
@@ -82,13 +82,14 @@ img {
 	line-height:0;
 	margin:0;
 	padding:0;
-	z-index:99;
+	z-index: 1000001;
 }
 #overflowDiv {
 	position:absolute;
 	margin:0;
 	padding:0;
 	overflow-y:auto;
+	z-index: 1000000;
 }
 #overflowDiv p {
 	padding:0;
